--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -3,6 +3,6 @@ set(GUI_SRC_LIST
     config.cpp
 )
 include(${wxWidgets_USE_FILE})
-add_library(GUI ${GUI_SRC_LIST})
+add_library(GUI STATIC ${GUI_SRC_LIST})
 target_link_libraries(GUI ${wxWidgets_LIBRARIES})
 target_include_directories (GUI PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
