Rename to MultiScreenSaver, add version info in rc, fix style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ string( APPEND CMAKE_CXX_FLAGS " /EHsc" )
 # /MT: static linking
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
-project(photoscreensaver)
+project(MultiScreenSaver)
 
 set(wxWidgets_CONFIGURATION mswu)
 set(wxWidgets_USE_STATIC ON)
